0.2.6 (UNRELEASED)
------------------
- Go back to using the serial test runner. automake 1.13's parallel test
  runner does not buy much for this project, and makes it a lot harder to
  analyse test failures from build logs.

0.2.5 (2013-06-10)
------------------
- Fix test-umockdev lsusb check to work in environments without any
  /dev/bus/usb.
- preload: Do not destroy errno on wrapping open() under umockdev-record.
- Add --version option to umockdev-run and umockdev-record.
- Fix building with Vala 0.20.

0.2.4 (2013-06-05)
------------------
- Fix "make check" for current automake 1.13.
- Add "make check-installed" target to run tests against the installed umockdev
  instead of against the build tree.

0.2.3 (2013-05-25)
------------------
- preload: Wrap fopen64() call; fixes operation on 32 bit architectures.
  (issue #10)

0.2.2 (2013-05-24)
------------------
- umockdev-run: Fix segfault if no program is specified. (issue #6)
- preload: Print proper error message instead of assertion when trying to load
  an empty or invalid ioctl record. (issue #8)
- umockdev-run: Fix --help output to not mention the child program twice.
- Fix DEVNAME property with older libudev versions.
- Handle "L:" (link priority) lines from udevadm for newer udev versions.
- Fix segfault with gcc 4.8 (due to changed behaviour of sizeof).
- Drop our posix_extra backport of execvp(), this was added to Vala 0.16.1.
  Bump vala dependency accordingly.

0.2.1 (2013-02-21)
------------------
- umockdev-wrapper: Use exec to avoid keeping the shell process around and make
  killing the subprogram from outside work properly.
- Fix building with automake 1.12, thanks Peter Hutterer.
- Support opening several netlink sockets (i. e. udev monitors) at the same
  time.
- Fix building with older kernels which don't have the EVIOCGMTSLOTS ioctl yet.

0.2 (2013-02-20)
----------------
Compatibility break: This does not work any more with recorded ioctl files from
version 0.1.
